# aws-ai-agent-hackathon

./: .agentcore.json  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  app.py  docker-compose.yaml  pyproject.toml  sana.py
.streamlit/: config.toml  style.css
agent/: main.py
agent/core/: agent.py  config.py
agent/core/prompts/: system.prompt
app/: auth.py  chat.py  config.py  main.py  pyproject.toml  styles.py  utils.py
infra/: browser.yaml  deploy.py  gateway.yaml  identity.yaml  pyproject.toml  runtime.yaml
infra/resources/: index.py
infra/resources/gateway/helplines-target/: openapi.json
infra/resources/gateway/resources-target/: index.py  requirements.txt  tools.json
infra/resources/knowledge-base/: social-anxiety.pdf.metadata.json
infra/resources/knowledge-base/nhs/: anorexia.pdf.metadata.json  bdd.pdf.metadata.json  binge-eating.pdf.metadata.json  bipolar.pdf.metadata.json  bpd.pdf.metadata.json  bulimia.pdf.metadata.json  depression.pdf.metadata.json  dissociation.pdf.metadata.json  eating-disorders.pdf.metadata.json  generalized-anxiety.pdf.metadata.json  hallucinations.pdf.metadata.json  ocd.pdf.metadata.json  panic.pdf.metadata.json  personality.pdf.metadata.json  phobias.pdf.metadata.json  post-natal-depression.pdf.metadata.json  post-partum-psychosis.pdf.metadata.json  ptsd.pdf.metadata.json  sad.pdf.metadata.json  social-anxiety.pdf.metadata.json
infra/resources/knowledge-base/nimh/: adhd.pdf.metadata.json  autism.pdf.metadata.json  bipolar.pdf.metadata.json  bpd.pdf.metadata.json  chronic-disease.pdf.metadata.json  depression.pdf.metadata.json  eating-disorders.pdf.metadata.json  generalized-anxiety.pdf.metadata.json  ocd.pdf.metadata.json  panic.pdf.metadata.json  phobias.pdf.metadata.json  psychosis.pdf.metadata.json  sad.pdf.metadata.json  schizophrenia.pdf.metadata.json  stress.pdf.metadata.json  suicide-faq.pdf.metadata.json
infra/resources/knowledge-base/other/: ocd-2.pdf.metadata.json  ocd.pdf.metadata.json
infra/resources/knowledge-base/who/: anxiety.pdf.metadata.json  bipolar.pdf.metadata.json  depression.pdf.metadata.json
sana/: Dockerfile  docker-compose.yaml  main.py  pyproject.toml
sana/agent/: __init__.py  agent.py
sana/agent/prompts/: system.prompt
sana/agent/tools/: __init__.py  calendar.py  search.py  therapists.py
sana/core/: auth.py  config.py  context.py  models.py  queue.py  task.py
utils/: aws.py
