[project]
name = "sana-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopy>=2.4.1",
    "requests>=2.32.5",
    "streamlit>=1.50.0",
    "streamlit-cookies-controller>=0.0.4",
    "streamlit-js-eval>=0.1.7",
    "tzfpy[tzdata]>=1.0.1",
]
